[gd_scene load_steps=29 format=2]

[ext_resource path="res://scripts/main.gd" type="Script" id=1]
[ext_resource path="res://assets/gradient.tres" type="Gradient" id=2]
[ext_resource path="res://assets/junebug.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/coin.svg" type="Texture" id=4]
[ext_resource path="res://scripts/tile_backgrounds.gd" type="Script" id=5]
[ext_resource path="res://assets/plus.svg" type="Texture" id=6]
[ext_resource path="res://scripts/grid.gd" type="Script" id=7]
[ext_resource path="res://scenes/upgrade_box.tscn" type="PackedScene" id=8]
[ext_resource path="res://scripts/ScrollContainer.gd" type="Script" id=9]
[ext_resource path="res://assets/recycle.svg" type="Texture" id=10]
[ext_resource path="res://assets/main_theme.theme" type="Theme" id=11]
[ext_resource path="res://assets/upgrades.png" type="Texture" id=12]
[ext_resource path="res://scripts/upgrades.gd" type="Script" id=13]
[ext_resource path="res://scenes/achievement.tscn" type="PackedScene" id=14]
[ext_resource path="res://scenes/profit_indicator.tscn" type="PackedScene" id=15]

[sub_resource type="GradientTexture" id=1]
gradient = ExtResource( 2 )
width = 2000

[sub_resource type="StyleBoxTexture" id=2]
texture = SubResource( 1 )
region_rect = Rect2( 0, 0, 2000, 0 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40
shadow_color = Color( 0.109804, 0.113725, 0.215686, 0.262745 )
shadow_size = 5
shadow_offset = Vector2( 5, 5 )

[sub_resource type="StyleBoxFlat" id=4]
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40
shadow_color = Color( 0.0862745, 0.0980392, 0.462745, 0.262745 )
shadow_size = 5

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.980392, 0.980392, 0.980392, 0.188235 )
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="DynamicFont" id=6]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0, 0, 0, 0.592157 )
border_blend = true
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0, 0, 0.6 )
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40
shadow_color = Color( 0.109804, 0.113725, 0.215686, 0.262745 )
shadow_size = 5
shadow_offset = Vector2( 5, 5 )

[sub_resource type="DynamicFont" id=9]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.188235, 0.988235, 0.529412, 0.6 )
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40
shadow_color = Color( 0.109804, 0.113725, 0.215686, 0.262745 )
shadow_size = 5
shadow_offset = Vector2( 5, 5 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 1, 1, 1, 0 )
border_color = Color( 0.92549, 0.968627, 0.435294, 1 )
border_blend = true
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
corner_detail = 12
shadow_color = Color( 0.992157, 0.996078, 0.337255, 0.52549 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.984314, 0.952941, 0.839216, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40
shadow_color = Color( 0.0862745, 0.0980392, 0.462745, 0.262745 )
shadow_size = 5

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[node name="main" type="Node2D"]
script = ExtResource( 1 )

[node name="Gradient" type="Control" parent="."]
margin_right = 576.0
margin_bottom = 843.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Gradient" type="Panel" parent="Gradient"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -288.0
margin_right = 555.0
margin_bottom = 576.0
rect_rotation = -90.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="VBoxContainer" parent="."]
margin_left = 16.0
margin_top = 576.0
margin_right = 560.0
margin_bottom = 826.0
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoveInfo" type="Panel" parent="Info"]
margin_right = 544.0
margin_bottom = 95.0
rect_min_size = Vector2( 0, 95 )
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MovesIndicator" type="Panel" parent="Info/MoveInfo"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 95 )
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="Info/MoveInfo"]
margin_right = 544.0
margin_bottom = 10.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoveTimerBar" type="Panel" parent="Info/MoveInfo/Margin"]
margin_left = 5.0
margin_top = 5.0
margin_right = 539.0
margin_bottom = 5.0
custom_styles/panel = SubResource( 5 )

[node name="Margin2" type="MarginContainer" parent="Info/MoveInfo"]
margin_right = 544.0
margin_bottom = 95.0
rect_clip_content = true
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Info/MoveInfo/Margin2"]
margin_left = 30.0
margin_top = 30.0
margin_right = 514.0
margin_bottom = 65.0

[node name="MovesLabel" type="Label" parent="Info/MoveInfo/Margin2/CenterContainer"]
margin_left = 231.0
margin_right = 253.0
margin_bottom = 35.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 8
size_flags_vertical = 3
custom_fonts/font = SubResource( 6 )
text = "3"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoveTimer" type="Timer" parent="Info/MoveInfo"]
wait_time = 4.0
autostart = true

[node name="Panel" type="Panel" parent="Info/MoveInfo"]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -1.0
margin_top = -47.5
margin_right = 93.0
margin_bottom = 48.5
custom_styles/panel = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddMovesButton" type="TextureButton" parent="Info/MoveInfo"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -47.5
margin_right = 95.0
margin_bottom = 47.5
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 6 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Amount" type="Button" parent="Info/MoveInfo/AddMovesButton"]
margin_left = 63.5045
margin_top = -6.35297
margin_right = 153.505
margin_bottom = 33.647
mouse_default_cursor_shape = 2
theme = ExtResource( 11 )
text = "X1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinsInfo" type="Panel" parent="Info"]
margin_top = 110.0
margin_right = 544.0
margin_bottom = 205.0
rect_min_size = Vector2( 0, 95 )
custom_styles/panel = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinSprite" type="Sprite" parent="Info/CoinsInfo"]
position = Vector2( -2, 0 )
scale = Vector2( 0.46, 0.47 )
texture = ExtResource( 4 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Margin" type="MarginContainer" parent="Info/CoinsInfo"]
margin_right = 534.0
margin_bottom = 95.0
rect_clip_content = true
custom_constants/margin_right = 13
custom_constants/margin_top = 30
custom_constants/margin_left = 110
custom_constants/margin_bottom = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinsContainer" type="HBoxContainer" parent="Info/CoinsInfo/Margin"]
margin_left = 110.0
margin_top = 30.0
margin_right = 521.0
margin_bottom = 65.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TotalLabel" type="Label" parent="Info/CoinsInfo/Margin/CoinsContainer"]
margin_right = 289.0
margin_bottom = 35.0
rect_min_size = Vector2( 0, 20 )
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 6 )
text = "0.00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IncomeLabel" type="Label" parent="Info/CoinsInfo/Margin/CoinsContainer"]
margin_left = 289.0
margin_right = 375.0
margin_bottom = 35.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 8
size_flags_vertical = 3
custom_fonts/font = SubResource( 6 )
text = "(+0/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PerSecondLabel" type="Label" parent="Info/CoinsInfo/Margin/CoinsContainer"]
margin_left = 375.0
margin_right = 396.0
margin_bottom = 35.0
size_flags_horizontal = 8
size_flags_vertical = 15
custom_fonts/font = SubResource( 9 )
text = "S"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Parentheses" type="Label" parent="Info/CoinsInfo/Margin/CoinsContainer"]
margin_left = 396.0
margin_right = 411.0
margin_bottom = 35.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 8
size_flags_vertical = 3
custom_fonts/font = SubResource( 6 )
text = ")"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IncomeTimer" type="Timer" parent="Info/CoinsInfo"]
wait_time = 2.0
autostart = true

[node name="Grid Backround" type="Panel" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 560.0
margin_bottom = 560.0
custom_styles/panel = SubResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tile Backgrounds" type="Node2D" parent="Grid Backround"]
position = Vector2( -17, -16 )
script = ExtResource( 5 )

[node name="Tiles" type="Node2D" parent="Grid Backround"]
position = Vector2( -16, -16 )
script = ExtResource( 7 )

[node name="RecycleButton" type="TextureButton" parent="Grid Backround"]
margin_left = 450.726
margin_top = 550.633
margin_right = 540.726
margin_bottom = 650.633
texture_normal = ExtResource( 10 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Grid Backround/RecycleButton"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -3.0
margin_top = 10.0
margin_right = -0.999992
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_styles/panel = SubResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpgradesButton" type="TextureButton" parent="."]
margin_left = 415.78
margin_top = 738.776
margin_right = 1252.78
margin_bottom = 1396.78
rect_scale = Vector2( 0.18, 0.15 )
texture_normal = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Upgrades" type="Panel" parent="."]
visible = false
margin_left = 16.0
margin_top = 16.0
margin_right = 560.0
margin_bottom = 827.0
custom_styles/panel = SubResource( 12 )
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Upgrades"]
margin_right = 540.0
margin_bottom = 811.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 11 )
scroll_horizontal_enabled = false
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Upgrades/ScrollContainer"]
margin_right = 522.0
margin_bottom = 248.0
custom_constants/margin_right = 0
custom_constants/margin_top = 16
custom_constants/margin_left = 26
custom_constants/margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Upgrades/ScrollContainer/MarginContainer"]
margin_left = 26.0
margin_top = 16.0
margin_right = 522.0
margin_bottom = 232.0
custom_constants/separation = 16

[node name="UpgradeBox" parent="Upgrades/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource( 8 )]
anchor_left = 0.0
anchor_right = 0.0
margin_left = 0.0
margin_right = 496.0
mouse_filter = 1

[node name="Border" type="Panel" parent="Upgrades"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_top = -2.0
margin_right = 1.0
margin_bottom = 1.00006
mouse_filter = 2
custom_styles/panel = SubResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Achievements" type="Panel" parent="."]
visible = false
margin_left = 16.0
margin_top = 16.0
margin_right = 560.0
margin_bottom = 827.0
custom_styles/panel = SubResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Achievements"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 6.10352e-05
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 11 )
scroll_horizontal_enabled = false
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Achievements/ScrollContainer"]
margin_right = 172.0
margin_bottom = 197.0
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="Achievements/ScrollContainer/MarginContainer"]
margin_left = 32.0
margin_top = 32.0
margin_right = 140.0
margin_bottom = 165.0
custom_constants/vseparation = 16
custom_constants/hseparation = 16
columns = 4

[node name="VBoxContainer" parent="Achievements/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource( 14 )]

[node name="Border" type="Panel" parent="Achievements"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_top = -2.0
margin_right = 1.0
margin_bottom = 1.00006
mouse_filter = 2
custom_styles/panel = SubResource( 13 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Node2D" parent="." instance=ExtResource( 15 )]
position = Vector2( 226.348, 380.24 )
[connection signal="timeout" from="Info/MoveInfo/MoveTimer" to="." method="_on_MoveTimer_timeout"]
[connection signal="pressed" from="Info/MoveInfo/AddMovesButton" to="." method="_on_AddMovesButton_pressed"]
[connection signal="pressed" from="Info/MoveInfo/AddMovesButton/Amount" to="." method="_on_MoveAmount_pressed"]
[connection signal="timeout" from="Info/CoinsInfo/IncomeTimer" to="." method="_on_IncomeTimer_timeout"]
[connection signal="pressed" from="Grid Backround/RecycleButton" to="Grid Backround/Tiles" method="_on_RecycleButton_pressed"]
[connection signal="pressed" from="UpgradesButton" to="Upgrades" method="_on_UpgradesButton_pressed"]
